// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateMarkdown should generate markdown with all fields populated 1`] = `
{
  "content": "---
layout: layouts/component.njk
title: Test Component
type: component
eleventyNavigation:
  key: Test Component
  parent: Components
  excerpt: "This is a brief description."
---

{% tabs "Contents" %}

{% tab "Overview" %}

## Overview

This is an overview.

## Why is the component needed?

This is the problem solved.

## Current uses for the component

This is how it is used.

{% endtab %}

{% tab "Code Stuff" %}

## Code Stuff

### Component Code


{% endtab %}

{% tab "Additional Info" %}

## Additional Info

Additional information here.

## Links

### Prototype


## Thing to consider

{% endtab %}

{% tab "Accessibility" %}

## Accessibility

Accessibility details here.

## Links

<a href="" target="_blank" rel="noopener noreferrer">Prototype example (opens in a new tab)</a>

## Thing to consider

{% endtab %}

{% tab "Contribution" %}

## Contribution

Test User

test@test.com

## History

**Test User** 01 January 2023

Component added

{% endtab %}

{% endtabs %}
",
  "filename": "component/documentation/test-component.md",
}
`;

exports[`generateMarkdown should handle missing details gracefully 1`] = `
{
  "content": "---
layout: layouts/component.njk
title: unknown-component
type: component
eleventyNavigation:
  key: unknown-component
  parent: Components
  excerpt: ""
---

{% tabs "Contents" %}

{% tab "Overview" %}

## Overview



## Why is the component needed?



## Current uses for the component



{% endtab %}

{% tab "Code Stuff" %}

## Code Stuff

### Component Code


{% endtab %}

{% tab "Additional Info" %}

## Additional Info



## Links

### Prototype


## Thing to consider

{% endtab %}

{% tab "Accessibility" %}

## Accessibility



## Links

<a href="" target="_blank" rel="noopener noreferrer">Prototype example (opens in a new tab)</a>

## Thing to consider

{% endtab %}

{% tab "Contribution" %}

## Contribution





## History

**** 01 January 2023

Component added

{% endtab %}

{% endtabs %}
",
  "filename": "component/documentation/unknown-component.md",
}
`;

exports[`generateMarkdown should handle missing image data gracefully 1`] = `
{
  "content": "---
layout: layouts/component.njk
title: Another Component
type: component
eleventyNavigation:
  key: Another Component
  parent: Components
  excerpt: "Another brief description."
---

{% tabs "Contents" %}

{% tab "Overview" %}

## Overview

Another overview.

## Why is the component needed?

Another problem solved.

## Current uses for the component

Another usage.

{% endtab %}

{% tab "Code Stuff" %}

## Code Stuff

### Component Code


{% endtab %}

{% tab "Additional Info" %}

## Additional Info

Additional information here.

## Links

### Prototype


## Thing to consider

{% endtab %}

{% tab "Accessibility" %}

## Accessibility



## Links

<a href="" target="_blank" rel="noopener noreferrer">Prototype example (opens in a new tab)</a>

## Thing to consider

{% endtab %}

{% tab "Contribution" %}

## Contribution

Another User

another@test.com

## History

**Another User** 01 January 2023

Component added

{% endtab %}

{% endtabs %}
",
  "filename": "component/documentation/another-component.md",
}
`;

exports[`generateMarkdown should return minimal markdown if no valid data is provided 1`] = `
{
  "content": "---
layout: layouts/component.njk
title: unknown-component
type: component
eleventyNavigation:
  key: unknown-component
  parent: Components
  excerpt: ""
---

{% tabs "Contents" %}

{% tab "Overview" %}

## Overview



## Why is the component needed?



## Current uses for the component



{% endtab %}

{% tab "Code Stuff" %}

## Code Stuff

### Component Code


{% endtab %}

{% tab "Additional Info" %}

## Additional Info



## Links

### Prototype


## Thing to consider

{% endtab %}

{% tab "Accessibility" %}

## Accessibility



## Links

<a href="" target="_blank" rel="noopener noreferrer">Prototype example (opens in a new tab)</a>

## Thing to consider

{% endtab %}

{% tab "Contribution" %}

## Contribution





## History

**** 01 January 2023

Component added

{% endtab %}

{% endtabs %}
",
  "filename": "component/documentation/unknown-component.md",
}
`;

exports[`generateMarkdown should sanitize the filename correctly 1`] = `
{
  "content": "---
layout: layouts/component.njk
title: Component! With@ Special#Chars
type: component
eleventyNavigation:
  key: Component! With@ Special#Chars
  parent: Components
  excerpt: "Brief description here."
---

{% tabs "Contents" %}

{% tab "Overview" %}

## Overview

Overview here.

## Why is the component needed?

Problem solved here.

## Current uses for the component

Usage here.

{% endtab %}

{% tab "Code Stuff" %}

## Code Stuff

### Component Code


{% endtab %}

{% tab "Additional Info" %}

## Additional Info

Additional information here.

## Links

### Prototype


## Thing to consider

{% endtab %}

{% tab "Accessibility" %}

## Accessibility



## Links

<a href="" target="_blank" rel="noopener noreferrer">Prototype example (opens in a new tab)</a>

## Thing to consider

{% endtab %}

{% tab "Contribution" %}

## Contribution

Special User

special@test.com

## History

**Special User** 01 January 2023

Component added

{% endtab %}

{% endtabs %}
",
  "filename": "component/documentation/component--with--special-chars.md",
}
`;
